changes in view

--- a/app/views/rent_mailer/new_rent.html.erb
+++ b/app/views/rent_mailer/new_rent.html.erb
@@ -13,6 +13,6 @@
     <br>
     <h3>Rental information</h3>
     <h6>Start date: <%= @rent.start_of_rent %> </h6>
-    <h6>Book author: <%= @rent.end_of_rent %> </h6>
+    <h6>End date: <%= @rent.end_of_rent %> </h6>
   </body>
 </html>
