--- a/app/views/rent_mailer/end_of_rent.html.erb
+++ b/app/views/rent_mailer/end_of_rent.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Your book rental has expired!</h1>
+    <h1><%= t 'books.your_book_rental_has_expired' %></h1>
     <br>
-    <h6>Book title: <%= @rent.book.title %> </h6>
-    <h6>End date: <%= @rent.end_of_rent %> </h6>
+    <h6><%= "#{t 'books.book_title' }: #{@rent.book.title}" %></h6>
+    <h6><%= "#{t 'books.end_date' }: #{@rent.end_of_rent}" %></h6>
   </body>
 </html>
