--- a/app/views/rent_mailer/new_rent.html.erb
+++ b/app/views/rent_mailer/new_rent.html.erb
@@ -4,15 +4,15 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>New rent created, yay!</h1>
-    <p>Rental creation date: <%=@rent.created_at%></p>
+    <h1><%= "#{t 'books.new_rent_created' }, yay!" %></h1>
+    <p><%= "#{t 'books.rental_creation_date' }: #{@rent.created_at}" %></p>
     <br>
-    <h3>Book information</h3>
-    <h6>Book title: <%= @rent.book.title %> </h6>
-    <h6>Book author: <%= @rent.book.title %> </h6>
+    <h3><%= t 'books.book_information' %></h3>
+    <h6><%= "#{t 'books.book_title' }: #{@rent.book.title}" %> </h6>
+    <h6><%= "#{t 'books.book_author' }: #{@rent.book.author}" %> </h6>
     <br>
-    <h3>Rental information</h3>
-    <h6>Start date: <%= @rent.start_of_rent %> </h6>
-    <h6>Book author: <%= @rent.end_of_rent %> </h6>
+    <h3><%= t 'books.rental_information' %></h3>
+    <h6><%= "#{t 'books.start_date' }: #{@rent.start_of_rent}" %> </h6>
+    <h6><%= "#{t 'books.end_date' }: #{@rent.end_of_rent}" %> </h6>
   </body>
 </html>
